# wasm-fun

./: package-lock.json  package.json  wasm.js
WAT/: index.js  text.wat  wasm.js
rusty_wasm/hello-wasm/: Cargo.toml
